--- a/public_html/themes/bc/sass/rtl.scss
+++ b/public_html/themes/bc/sass/rtl.scss
@@ -539,6 +539,10 @@ body.has-search-map{ direction: rtl; }
     right: auto;
     left: 30px;
 }
+.bc_wrap .bc_user_profile .bc-list-item .list-item .item-list .item-footer .control-action {
+    right: auto;
+    left: auto;
+}
 .bc_wrap .bc_user_profile .badge {
     display: inline;
 }
